force-app/main/default/objects/Flight__c/Flight__c.object-meta.xml
<CustomObject>
    <label>Flight</label>
    <nameField>
        <displayFormat>Flight-{00000}</displayFormat>
        <label>Flight No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>