force-app/main/default/objects/Flight__c/fields/Expected_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Expected_Arrival_Time__c</fullName>
    <label>Expected Arrival Time</label>
    <type>DateTime</type>
</CustomField>