force-app/main/default/objects/Flight__c/fields/Plane__c.field-meta.xml
<CustomField>
    <fullName>Plane__c</fullName>
    <label>Plane</label>
    <referenceTo>Plane__c</referenceTo>
    <relationshipLabel>Flights</relationshipLabel>
    <relationshipName>Flights</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>