force-app/main/default/objects/Flight__c/fields/Route_Number__c.field-meta.xml
<CustomField>
    <fullName>Route_Number__c</fullName>
    <label>Route Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>