force-app/main/default/objects/Flight__c/fields/Source_Airport__c.field-meta.xml
<CustomField>
    <fullName>Source_Airport__c</fullName>
    <label>Source Airport</label>
    <length>3</length>
    <type>Text</type>
</CustomField>