force-app/main/default/objects/Flight__c/fields/Total_Booking_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Booking_Value__c</fullName>
    <label>Total Booking Value</label>
    <summarizedField>Booking__c.Price__c</summarizedField>
    <summaryForeignKey>Booking__c.Flight__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>