force-app/main/default/objects/Flight__c/listViews/All_Flights.listView-meta.xml
<ListView>
    <fullName>All_Flights</fullName>
    <columns>NAME</columns>
    <columns>Plane__c</columns>
    <columns>Route_Number__c</columns>
    <columns>Source_Airport__c</columns>
    <columns>Destination_Airport__c</columns>
    <columns>Departure_Time__c</columns>
    <columns>Expected_Arrival_Time__c</columns>
    <columns>Actual_Arrival_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Booking_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Flights</label>
</ListView>